# postscript

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
benches/: common.rs  compact.rs  compact1.rs  compact1_bench.rs  lib.rs  type2.rs  type2_bench.rs
benches/support/: mod.rs
src/: band.rs  lib.rs  macros.rs  primitive.rs  tape.rs
src/compact/: char_set.rs  dictionary_index.rs  encoding.rs  font_set.rs  header.rs  index.rs  macros.rs  mod.rs  name_index.rs  number.rs  offset.rs  operation.rs  primitive.rs  string_index.rs
src/compact/compound/: char_set.rs  char_string_index.rs  charset.rs  dictionary_index.rs  encoding.rs  header.rs  index.rs  macros.rs  mod.rs  name_index.rs  operation.rs  string_index.rs  subroutine_index.rs
src/compact/compound/index/: mod.rs  string.rs
src/compact/index/: char_strings.rs  dictionaries.rs  mod.rs  names.rs  strings.rs  subroutines.rs
src/compact/primitive/: integer.rs  macros.rs  mod.rs  number.rs  offset.rs  real.rs
src/compact1/: char_set.rs  character_set.rs  encoding.rs  font_set.rs  header.rs  mod.rs  number.rs  offset.rs  operation.rs
src/compact1/font_set/: character_id_keyed.rs  character_name_keyed.rs  mod.rs
src/compact1/index/: char_strings.rs  character_strings.rs  dictionaries.rs  mod.rs  names.rs  strings.rs  subroutines.rs
src/type1/: mod.rs
src/type2/: machine.rs  mod.rs  number.rs  operation.rs  program.rs
src/type2/compound/: mod.rs  operation.rs
src/type2/primitive/: mod.rs  number.rs
tests/: common.rs  compact.rs  compact1.rs  compact1_test.rs  lib.rs  type2.rs  type2_test.rs
tests/common/: mod.rs
tests/support/: mod.rs
