[package]
name = "postscript"
version = "0.13.2"
edition = "2018"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a parser for PostScript fonts."
documentation = "https://docs.rs/postscript"
homepage = "https://github.com/bodoni/postscript"
repository = "https://github.com/bodoni/postscript"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "postscript", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[dev-dependencies]
random = "0.12"
