[package]
name = "postscript"
version = "0.14.0"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a parser for PostScript fonts."
documentation = "https://docs.rs/postscript"
homepage = "https://github.com/bodoni/postscript"
repository = "https://github.com/bodoni/postscript"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "postscript", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[features]
# https://github.com/google/fonts/issues/5620
ignore-missing-operators = []

[dev-dependencies]
random = "0.12"
