[package]
name = "postscript"
version = "0.16.4"
edition = "2021"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a parser for PostScript fonts."
documentation = "https://docs.rs/postscript"
homepage = "https://github.com/bodoni/postscript"
repository = "https://github.com/bodoni/postscript"
readme = "README.md"
categories = ["parsing"]
keywords = ["font", "postscript", "typeface", "typography"]
exclude = ["tests/fixtures/*"]

[dependencies]
typeface = "0.2"

[dev-dependencies]
random = "0.12"
